--- a/docs/latex/d1/dd9/clib__list_8h.tex
+++ b/docs/latex/d1/dd9/clib__list_8h.tex
@@ -5,7 +5,7 @@
 \begin{DoxyCompactItemize}
 \item 
 \#define \mbox{\hyperlink{clib__list_8h_a42b63eae2f0d339bd532d860a213be2f}{CLIB\+\_\+\+LIST\+\_\+\+SETUP}}(\mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}},  ERROR\+\_\+\+VALUE)
-\begin{DoxyCompactList}\small\item\em Read detailed documentation about lists at ../dev/clib\+\_\+list\+\_\+base\+\_\+type.h. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Macro Definition Documentation}
@@ -14,8 +14,4 @@
 \index{CLIB\_LIST\_SETUP@{CLIB\_LIST\_SETUP}!clib\_list.h@{clib\_list.h}}
 \doxysubsubsection{\texorpdfstring{CLIB\_LIST\_SETUP}{CLIB\_LIST\_SETUP}}
 {\footnotesize\ttfamily \#define CLIB\+\_\+\+LIST\+\_\+\+SETUP(\begin{DoxyParamCaption}\item[{}]{\mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}},  }\item[{}]{ERROR\+\_\+\+VALUE }\end{DoxyParamCaption})}
-
-
-
-Read detailed documentation about lists at ../dev/clib\+\_\+list\+\_\+base\+\_\+type.h. 
 
