Added some macros in clib_macros.h and improved the docs

--- a/docs/latex/d1/dd9/clib__list_8h.tex
+++ b/docs/latex/d1/dd9/clib__list_8h.tex
@@ -1,11 +1,33 @@
 \doxysection{clib/clib\+\_\+list.h File Reference}
 \hypertarget{clib__list_8h}{}\label{clib__list_8h}\index{clib/clib\_list.h@{clib/clib\_list.h}}
+
+
+Adds template list support to CLib library.  
+
+
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 \doxysubsubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
 \#define \mbox{\hyperlink{clib__list_8h_a42b63eae2f0d339bd532d860a213be2f}{CLIB\+\_\+\+LIST\+\_\+\+SETUP}}(\mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}},  ERROR\+\_\+\+VALUE)
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Adds template list support to CLib library. 
+
+\begin{DoxyAuthor}{Author}
+Rouvik Maji (\href{mailto:majirouvik@gmail.com}{\texttt{ majirouvik@gmail.\+com}}) 
+\end{DoxyAuthor}
+\begin{DoxyNote}{Note}
+Documentation at\+: \doxylink{clib__list__base__type_8h}{dev/clib\+\_\+list\+\_\+base\+\_\+type.\+h}
+\end{DoxyNote}
+\begin{DoxyDate}{Date}
+2024-\/08-\/05
+\end{DoxyDate}
+\begin{DoxyCopyright}{Copyright}
+Copyright (c) 2024 GNU GPL \href{https://www.gnu.org/licenses/}{\texttt{ https\+://www.\+gnu.\+org/licenses/}} 
+\end{DoxyCopyright}
 
 
 \doxysubsection{Macro Definition Documentation}
