--- a/docs/latex/db/d3f/clib__list__base__type_8h.tex
+++ b/docs/latex/db/d3f/clib__list__base__type_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{dev/clib\+\_\+list\+\_\+base\+\_\+type.h File Reference}
 \hypertarget{clib__list__base__type_8h}{}\label{clib__list__base__type_8h}\index{dev/clib\_list\_base\_type.h@{dev/clib\_list\_base\_type.h}}
+
+
+The dev base type code for templated \doxylink{clib__list_8h}{clib/clib\+\_\+list.\+h}, any updates must be made here first and then converted to macro form for templating.  
+
+
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 \doxysubsubsection*{Data Structures}
 \begin{DoxyCompactItemize}
@@ -45,6 +50,20 @@ void \mbox{\hyperlink{clib__list__base__type_8h_af01771d736dea27dfb471eb568d0f38
 \mbox{\hyperlink{clib__list__base__type_8h_a8cf7e2ac28100dba3b9b6aa8ed1048e7}{CLib\+\_\+\+List\+\_\+\+TYPE}} \mbox{\hyperlink{clib__list__base__type_8h_ae849b7e0ffe7d75e29f2354e6f04f1bf}{CLib\+\_\+\+List\+\_\+at}} (\mbox{\hyperlink{struct_c_lib___list___root}{CLib\+\_\+\+List\+\_\+\+Root}} \texorpdfstring{$\ast$}{*}root, int index)
 \begin{DoxyCompactList}\small\item\em Returns the element contained by the list at a particular index ~\newline
  Note\+: This function returns ERROR\+\_\+\+VALUE incase of bad indexing which mush be checked by the end user. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+The dev base type code for templated \doxylink{clib__list_8h}{clib/clib\+\_\+list.\+h}, any updates must be made here first and then converted to macro form for templating. 
+
+\begin{DoxyAuthor}{Author}
+Rouvik Maji (\href{mailto:majirouvik@gmail.com}{\texttt{ majirouvik@gmail.\+com}}) 
+\end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+2024-\/08-\/05
+\end{DoxyDate}
+\begin{DoxyCopyright}{Copyright}
+Copyright (c) 2024 GNU GPL \href{https://www.gnu.org/licenses/}{\texttt{ https\+://www.\+gnu.\+org/licenses/}} 
+\end{DoxyCopyright}
 
 
 \doxysubsection{Macro Definition Documentation}
