--- a/docs/latex/dir_5fc0168d11760b9445bd29fa15d9290f.tex
+++ b/docs/latex/dir_5fc0168d11760b9445bd29fa15d9290f.tex
@@ -4,6 +4,6 @@
 \begin{DoxyCompactItemize}
 \item 
 file \mbox{\hyperlink{clib__list__base__type_8h}{clib\+\_\+list\+\_\+base\+\_\+type.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em The dev base type code for templated \doxylink{clib__list_8h}{clib/clib\+\_\+list.\+h}, any updates must be made here first and then converted to macro form for templating. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{clib__vector__base__type_8h}{clib\+\_\+vector\+\_\+base\+\_\+type.\+h}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em The dev base type code for templated \doxylink{clib__vector_8h}{clib/clib\+\_\+vector.\+h}, any updates must be made here first and then converted to macro form for templating. \end{DoxyCompactList}\end{DoxyCompactItemize}
