--- a/docs/latex/dir_78d507a56669e3e8b30ad2eaef9dd795.tex
+++ b/docs/latex/dir_78d507a56669e3e8b30ad2eaef9dd795.tex
@@ -4,10 +4,12 @@
 \begin{DoxyCompactItemize}
 \item 
 file \mbox{\hyperlink{clib__fs_8h}{clib\+\_\+fs.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Adds file system support to CLib library. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{clib__list_8h}{clib\+\_\+list.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Adds template list support to CLib library. \end{DoxyCompactList}\item 
+file \mbox{\hyperlink{clib__macro_8h}{clib\+\_\+macro.\+h}}
+\begin{DoxyCompactList}\small\item\em Adds simple yet useful macros to codebase. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{clib__string_8h}{clib\+\_\+string.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Adds dynamic string support to CLib library. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{clib__vector_8h}{clib\+\_\+vector.\+h}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Adds template vector support to CLib library. \end{DoxyCompactList}\end{DoxyCompactItemize}
