--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -221,6 +221,8 @@
 \input{d9/d3e/clib__fs_8h_source}
 \input{d1/dd9/clib__list_8h}
 \input{d1/dd9/clib__list_8h_source}
+\input{d0/dc3/clib__macro_8h}
+\input{d0/dc3/clib__macro_8h_source}
 \input{d7/d2c/clib__string_8h}
 \input{d7/d2c/clib__string_8h_source}
 \input{db/d27/clib__vector_8h}
