--- a/docs/latex/db/d27/clib__vector_8h.tex
+++ b/docs/latex/db/d27/clib__vector_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{clib/clib\+\_\+vector.h File Reference}
 \hypertarget{clib__vector_8h}{}\label{clib__vector_8h}\index{clib/clib\_vector.h@{clib/clib\_vector.h}}
+
+
+Adds template vector support to CLib library.  
+
+
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$string.\+h$>$}\newline
 \doxysubsubsection*{Macros}
@@ -9,6 +14,23 @@
 \item 
 \#define \mbox{\hyperlink{clib__vector_8h_a0f3e5d3658a872ddd8c2250241793962}{CLIB\+\_\+\+VECTOR\+\_\+\+SETUP}}(\mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}},  ERROR\+\_\+\+VALUE)
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Adds template vector support to CLib library. 
+
+\begin{DoxyAuthor}{Author}
+Rouvik Maji (\href{mailto:majirouvik@gmail.com}{\texttt{ majirouvik@gmail.\+com}}) 
+\end{DoxyAuthor}
+\begin{DoxyNote}{Note}
+Documentation at\+: \doxylink{clib__vector__base__type_8h}{dev/clib\+\_\+vector\+\_\+base\+\_\+type.\+h}
+\end{DoxyNote}
+\begin{DoxyDate}{Date}
+2024-\/08-\/05
+\end{DoxyDate}
+\begin{DoxyCopyright}{Copyright}
+Copyright (c) 2024 GNU GPL \href{https://www.gnu.org/licenses/}{\texttt{ https\+://www.\+gnu.\+org/licenses/}} 
+\end{DoxyCopyright}
 
 
 \doxysubsection{Macro Definition Documentation}
