--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,9 +1,10 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{clib/\mbox{\hyperlink{clib__fs_8h}{clib\+\_\+fs.\+h}} }{\pageref{clib__fs_8h}}{}
-\item\contentsline{section}{clib/\mbox{\hyperlink{clib__list_8h}{clib\+\_\+list.\+h}} }{\pageref{clib__list_8h}}{}
-\item\contentsline{section}{clib/\mbox{\hyperlink{clib__string_8h}{clib\+\_\+string.\+h}} }{\pageref{clib__string_8h}}{}
-\item\contentsline{section}{clib/\mbox{\hyperlink{clib__vector_8h}{clib\+\_\+vector.\+h}} }{\pageref{clib__vector_8h}}{}
-\item\contentsline{section}{dev/\mbox{\hyperlink{clib__list__base__type_8h}{clib\+\_\+list\+\_\+base\+\_\+type.\+h}} }{\pageref{clib__list__base__type_8h}}{}
-\item\contentsline{section}{dev/\mbox{\hyperlink{clib__vector__base__type_8h}{clib\+\_\+vector\+\_\+base\+\_\+type.\+h}} }{\pageref{clib__vector__base__type_8h}}{}
+\item\contentsline{section}{clib/\mbox{\hyperlink{clib__fs_8h}{clib\+\_\+fs.\+h}} \\*Adds file system support to CLib library }{\pageref{clib__fs_8h}}{}
+\item\contentsline{section}{clib/\mbox{\hyperlink{clib__list_8h}{clib\+\_\+list.\+h}} \\*Adds template list support to CLib library }{\pageref{clib__list_8h}}{}
+\item\contentsline{section}{clib/\mbox{\hyperlink{clib__macro_8h}{clib\+\_\+macro.\+h}} \\*Adds simple yet useful macros to codebase }{\pageref{clib__macro_8h}}{}
+\item\contentsline{section}{clib/\mbox{\hyperlink{clib__string_8h}{clib\+\_\+string.\+h}} \\*Adds dynamic string support to CLib library }{\pageref{clib__string_8h}}{}
+\item\contentsline{section}{clib/\mbox{\hyperlink{clib__vector_8h}{clib\+\_\+vector.\+h}} \\*Adds template vector support to CLib library }{\pageref{clib__vector_8h}}{}
+\item\contentsline{section}{dev/\mbox{\hyperlink{clib__list__base__type_8h}{clib\+\_\+list\+\_\+base\+\_\+type.\+h}} \\*The dev base type code for templated \doxylink{clib__list_8h}{clib/clib\+\_\+list.\+h}, any updates must be made here first and then converted to macro form for templating }{\pageref{clib__list__base__type_8h}}{}
+\item\contentsline{section}{dev/\mbox{\hyperlink{clib__vector__base__type_8h}{clib\+\_\+vector\+\_\+base\+\_\+type.\+h}} \\*The dev base type code for templated \doxylink{clib__vector_8h}{clib/clib\+\_\+vector.\+h}, any updates must be made here first and then converted to macro form for templating }{\pageref{clib__vector__base__type_8h}}{}
 \end{DoxyCompactList}
