--- a/docs/latex/d0/d6f/struct_c_lib___string.tex
+++ b/docs/latex/d0/d6f/struct_c_lib___string.tex
@@ -2,8 +2,7 @@
 \hypertarget{struct_c_lib___string}{}\label{struct_c_lib___string}\index{CLib\_String@{CLib\_String}}
 
 
-Container to store the dynamic string ptr, length and buffer length ~\newline
- Note\+: Do not edit any contents of \doxylink{struct_c_lib___string}{CLib\+\_\+\+String} struct, especially the buf\+\_\+len content, it is required to safely free memory.  
+Container to store the dynamic string ptr, length and buffer length.  
 
 
 
@@ -22,8 +21,12 @@ int \mbox{\hyperlink{struct_c_lib___string_a557e860c0421d13847c313cfdfd20637}{bu
 
 
 \doxysubsection{Detailed Description}
-Container to store the dynamic string ptr, length and buffer length ~\newline
- Note\+: Do not edit any contents of \doxylink{struct_c_lib___string}{CLib\+\_\+\+String} struct, especially the buf\+\_\+len content, it is required to safely free memory. 
+Container to store the dynamic string ptr, length and buffer length. 
+
+\begin{DoxyWarning}{Warning}
+Do not edit any contents of \doxylink{struct_c_lib___string}{CLib\+\_\+\+String} struct, especially the buf\+\_\+len content, it is required to safely free memory 
+\end{DoxyWarning}
+
 
 \doxysubsection{Field Documentation}
 \Hypertarget{struct_c_lib___string_a557e860c0421d13847c313cfdfd20637}\label{struct_c_lib___string_a557e860c0421d13847c313cfdfd20637} 
