--- a/docs/latex/d3/da2/clib__vector__base__type_8h.tex
+++ b/docs/latex/d3/da2/clib__vector__base__type_8h.tex
@@ -43,8 +43,7 @@ void \mbox{\hyperlink{clib__vector__base__type_8h_a348d4a509f277207f6d5f11a89dbc
 \mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}} \mbox{\hyperlink{clib__vector__base__type_8h_adc8a912ce5f1ecf5217b337c72260fb1}{CLib\+\_\+\+Vector\+\_\+pop\+Front}} (\mbox{\hyperlink{clib__vector__base__type_8h_a129e2b58d496da593ff9d6cfee43c29d}{CLib\+\_\+\+Vector\+\_\+t}} \texorpdfstring{$\ast$}{*}vector)
 \begin{DoxyCompactList}\small\item\em Pops off an element from the beginning of the list and returns it. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{clib__vector__base__type_8h_aeb8671ae8f74e5892f73d2f797cff054}{CLib\+\_\+\+Vector\+\_\+insert}} (\mbox{\hyperlink{clib__vector__base__type_8h_a129e2b58d496da593ff9d6cfee43c29d}{CLib\+\_\+\+Vector\+\_\+t}} \texorpdfstring{$\ast$}{*}vector, int position, \mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}} data)
-\begin{DoxyCompactList}\small\item\em Inserts and sets (if the element is already present) to the \doxylink{struct_c_lib___vector}{CLib\+\_\+\+Vector} ~\newline
- Behaviour Description\+: \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Inserts and sets (if the element is already present) to the \doxylink{struct_c_lib___vector}{CLib\+\_\+\+Vector}. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{clib__vector__base__type_8h_a2f73571b1fb505612db0547783e49f3a}{CLib\+\_\+\+Vector\+\_\+reserve}} (\mbox{\hyperlink{clib__vector__base__type_8h_a129e2b58d496da593ff9d6cfee43c29d}{CLib\+\_\+\+Vector\+\_\+t}} \texorpdfstring{$\ast$}{*}vector, int expected\+\_\+elements)
 \begin{DoxyCompactList}\small\item\em Reserves the vector with an arbitary amount of expected\+\_\+elements, this function can actually reserve for an arbitary size and not a multiple of CLIB\+\_\+\+VECTOR\+\_\+\+RESERVE. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{clib__vector__base__type_8h_a74fa65717ed4f7bb0b4a8ea7ab173f6b}{CLib\+\_\+\+Vector\+\_\+fill}} (\mbox{\hyperlink{clib__vector__base__type_8h_a129e2b58d496da593ff9d6cfee43c29d}{CLib\+\_\+\+Vector\+\_\+t}} \texorpdfstring{$\ast$}{*}vector, \mbox{\hyperlink{clib__vector__base__type_8h_a5a392548f2df67370cb15d2a5d75cd7b}{TYPE}} value, unsigned int offset, unsigned int count)
@@ -162,16 +161,16 @@ CLib\+\_\+\+Vector\+\_\+t The vector initialised
 
 
 
-Inserts and sets (if the element is already present) to the \doxylink{struct_c_lib___vector}{CLib\+\_\+\+Vector} ~\newline
- Behaviour Description\+: 
+Inserts and sets (if the element is already present) to the \doxylink{struct_c_lib___vector}{CLib\+\_\+\+Vector}. 
 
-
+\begin{DoxyNote}{Note}
+Behaviour Description\+:
 \begin{DoxyItemize}
 \item If position is less than size\+: Sets the element at the position with the data
 \item If position is greater than or equal to size\+: Adds 0 values to the uninitialised elements and sets the element at position ~\newline
- Note\+: All of the above operations will resize the vector if required
+ {\bfseries{All of the above operations will resize the vector if required}}
 \end{DoxyItemize}
-
+\end{DoxyNote}
 
 \begin{DoxyParams}{Parameters}
 {\em vector} & The pointer to the \doxylink{struct_c_lib___vector}{CLib\+\_\+\+Vector} to insert into \\
