--- a/docs/latex/d7/d3f/struct_c_lib___list.tex
+++ b/docs/latex/d7/d3f/struct_c_lib___list.tex
@@ -2,8 +2,7 @@
 \hypertarget{struct_c_lib___list}{}\label{struct_c_lib___list}\index{CLib\_List@{CLib\_List}}
 
 
-The list structure used to store the data of type TYPE as described in \doxylink{clib__list_8h_a42b63eae2f0d339bd532d860a213be2f}{CLIB\+\_\+\+LIST\+\_\+\+SETUP(\+TYPE, ERROR\+\_\+\+VALUE)} macro and a pointer to next element ~\newline
- Note\+: Dont edit the next pointer at all if you don\textquotesingle{}t want to shoot yourself at foot.  
+The list structure used to store the data of type TYPE as described in \doxylink{clib__list_8h_a42b63eae2f0d339bd532d860a213be2f}{CLIB\+\_\+\+LIST\+\_\+\+SETUP(\+TYPE, ERROR\+\_\+\+VALUE)} macro and a pointer to next element.  
 
 
 
@@ -20,8 +19,12 @@ struct \mbox{\hyperlink{struct_c_lib___list}{CLib\+\_\+\+List}} \texorpdfstring{
 
 
 \doxysubsection{Detailed Description}
-The list structure used to store the data of type TYPE as described in \doxylink{clib__list_8h_a42b63eae2f0d339bd532d860a213be2f}{CLIB\+\_\+\+LIST\+\_\+\+SETUP(\+TYPE, ERROR\+\_\+\+VALUE)} macro and a pointer to next element ~\newline
- Note\+: Dont edit the next pointer at all if you don\textquotesingle{}t want to shoot yourself at foot. 
+The list structure used to store the data of type TYPE as described in \doxylink{clib__list_8h_a42b63eae2f0d339bd532d860a213be2f}{CLIB\+\_\+\+LIST\+\_\+\+SETUP(\+TYPE, ERROR\+\_\+\+VALUE)} macro and a pointer to next element. 
+
+\begin{DoxyWarning}{Warning}
+Dont edit the next pointer at all if you don\textquotesingle{}t want to shoot yourself at foot 
+\end{DoxyWarning}
+
 
 \doxysubsection{Field Documentation}
 \Hypertarget{struct_c_lib___list_a09a3412ebd2b32c8b64d08cbe672bef9}\label{struct_c_lib___list_a09a3412ebd2b32c8b64d08cbe672bef9} 
